[package]
name = "trident"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.55.0", features = [
    "tokio",
    "dns",
    "kad",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
    "ping",
] }
tokio = { version = "1.43.0", features = ["full"] }

[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"
